--- a/templates/base.html
+++ b/templates/base.html
@@ -161,6 +161,13 @@
                             <i class="fas fa-plus-circle me-1"></i> New Tournament
                         </a>
                     </li>
+                    {% if session.get('name') == 'sarveshwarsenthilkumar' %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('admin.dashboard') }}">
+                            <i class="fas fa-shield-alt me-1"></i> Admin
+                        </a>
+                    </li>
+                    {% endif %}
                     {% endif %}
                 </ul>
                 <ul class="navbar-nav">
